--- a/app/src/main/res/xml/bottom_menu.xml
+++ b/app/src/main/res/xml/bottom_menu.xml
@@ -7,7 +7,9 @@
         android:id="@+id/partidosItem"
         android:title="@string/menuPartidos"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/partidosicon"/>
+        android:icon="@drawable/partidosicon"
+        android:checkable="true"
+        />
 
     <item
         android:id="@+id/equiposItem"
