--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RecyclerViewPartidos"
+    <FrameLayout
+        android:id="@+id/conteiner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:paddingBottom="60dp"/>
+
+    <include layout="@layout/bottombar"></include>
+
 </RelativeLayout>
