--- a/app/src/main/res/layout/partidos.xml
+++ b/app/src/main/res/layout/partidos.xml
@@ -11,7 +11,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -62,16 +64,12 @@
                     android:background="@color/colorAccent"
                     android:contentDescription="@string/app_name" />
 
-                <View
-                    android:id="@+id/divider2"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp" />
-
                 <TextView
                     android:id="@+id/nombreEquipoUno"
                     android:layout_width="99dp"
-                    android:layout_height="18dp"
-                    android:gravity="center_horizontal" />
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
@@ -115,16 +113,14 @@
                     tools:layout_editor_absoluteX="136dp"
                     tools:layout_editor_absoluteY="75dp" />
 
-                <View
-                    android:id="@+id/divider2w"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp" />
 
                 <TextView
                     android:id="@+id/nombreEquipoDos"
                     android:layout_width="99dp"
-                    android:layout_height="18dp"
-                    android:gravity="center_horizontal" />
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/app_name"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
