--- a/app/src/main/res/xml/bottom_menu.xml
+++ b/app/src/main/res/xml/bottom_menu.xml
@@ -17,5 +17,11 @@
         app:showAsAction="ifRoom"
         android:icon="@drawable/equiposicon"/>
 
+    <item
+        android:id="@+id/marcadoresItem"
+        android:title="@string/menuMarcadores"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/equiposicon"/>
+
 
 </menu>
