--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
 
     <FrameLayout
-        android:id="@+id/conteiner"
+        android:id="@+id/container"
         android:layout_width="match_parent"
+        android:paddingTop="82dp"
         android:layout_height="match_parent"
-        android:paddingBottom="60dp"/>
+        android:paddingBottom="60dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="20dp"
+            android:src="@drawable/qricon"/>
+    </FrameLayout>
 
     <include layout="@layout/bottombar"></include>
 
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
