--- a/app/src/main/res/layout/fragment_partidos.xml
+++ b/app/src/main/res/layout/fragment_partidos.xml
@@ -6,15 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:layout_marginTop="83dp"
     tools:context=".Fragments.PartidosFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/RecyclerViewPartidos"
@@ -23,13 +20,5 @@
             android:layout_alignParentTop="true" />
 
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"
-        android:src="@drawable/qricon"/>
 
 </android.support.design.widget.CoordinatorLayout>
