--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     >
-
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:paddingTop="82dp"
         android:layout_height="match_parent"
-        android:paddingBottom="60dp">
+        android:paddingTop="60dp"
+    >
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -25,4 +24,4 @@
     <include layout="@layout/bottombar"></include>
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
