--- a/app/src/main/res/layout/bottombar.xml
+++ b/app/src/main/res/layout/bottombar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/bottomBar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_alignParentBottom="true"
+    android:layout_alignParentTop="true"
     android:layout_gravity="bottom|end"
     app:itemIconTint="@xml/bottombar_selector"
     app:itemTextColor="@xml/bottombar_selector"
