--- a/app/src/main/res/layout/fragment_marcadores.xml
+++ b/app/src/main/res/layout/fragment_marcadores.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Fragments.MarcadoresFragment">
+    android:orientation="vertical"
+tools:context=".Fragments.MarcadoresFragment">
 
-    <LinearLayout
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    >
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerViewMarcadores"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        android:layout_alignParentTop="true" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/RecyclerViewMarcadores"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true" />
-    </LinearLayout>
+</LinearLayout>
 
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
